--- a/searchHospital/pom.xml
+++ b/searchHospital/pom.xml
@@ -63,7 +63,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mobile</artifactId>
+		    <version>1.5.14.RELEASE</version>
+		</dependency>
+</dependencies>
 
 	<build>
 		<plugins>
